# sqlcc

./: .gitignore  README.md  pyproject.toml  requirements.txt  sqlcc.py  test.py
.github/workflows/: publish.yml
