[project]
name = "sqlccc"
version = "1.0.0"
authors = [
  { name="Søren Brønsted", email="soren@bronsted.dk" },
]
description = "A cyclomatix complevity calculator for SQL"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/sorenbronsted/sqlcc"
Issues = "https://github.com/sorenbronsted/sqlcc/issues"